--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -24,3 +24,7 @@ services:
       - '@doctrine.orm.entity_manager'
       - '%easy_api.user_class%'
       - '%lexik_jwt_authentication.user_identity_field%'
+
+  EasyApiJwtAuthentication\Services\User\UserManager:
+    public: true
+    arguments: ['@service_container', '@security.token_storage', '@gesdinet.jwtrefreshtoken.send_token']
