--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
   ],
   "require": {
     "php": ">=7.4.3",
-    "citizen63000/easy-api-bundle": "dev-sf4_idp",
-    "gesdinet/jwt-refresh-token-bundle": "^0.7"
+    "citizen63000/easy-api-bundle": "dev-flex_test",
+    "gesdinet/jwt-refresh-token-bundle": "^1.1"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "@stable",
@@ -31,7 +31,10 @@
     "platform": {
       "php": "7.4.3"
     },
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "symfony/flex": true
+    }
   },
   "autoload": {
     "psr-4": {
