--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -28,3 +28,8 @@ services:
   EasyApiJwtAuthentication\Services\User\UserManager:
     public: true
     arguments: ['@service_container', '@security.token_storage', '@gesdinet.jwtrefreshtoken.send_token']
+
+  EasyApiJwtAuthentication\Controller\:
+    resource: '../../Controller'
+    public: true
+    tags: [ 'controller.service_arguments']
