--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -29,7 +29,11 @@ services:
     public: true
     arguments: ['@service_container', '@security.token_storage', '@gesdinet.jwtrefreshtoken.send_token']
 
-  EasyApiJwtAuthentication\Controller\:
-    resource: '../../Controller'
+  EasyApiJwtAuthentication\Controller\AuthenticationController:
     public: true
     tags: [ 'controller.service_arguments']
+
+#  EasyApiJwtAuthentication\Controller\AuthenticationController:
+#    public: true
+#    arguments: ['@security.token_storage', '@request_stack']
+#    tags: ['controller.service_arguments']
