--- a/composer.json
+++ b/composer.json
@@ -31,14 +31,22 @@
     "platform": {
       "php": "7.4.3"
     },
-    "sort-packages": true,
-    "allow-plugins": {
-      "symfony/flex": true
-    }
+    "sort-packages": true
   },
   "autoload": {
     "psr-4": {
-      "EasyApiJwtAuthentication\\": ""
+      "EasyApiBundle\\": ""
+    }
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    }
+  },
+  "extra": {
+    "symfony": {
+      "docker": false
     }
   }
 }
