--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "gesdinet/jwt-refresh-token-bundle": "^1.1"
   },
   "require-dev": {
+    "citizen63000/easy-api-tests": "^1.0.1",
     "friendsofphp/php-cs-fixer": "@stable",
     "guzzlehttp/psr7": "^1.3",
     "php-http/guzzle6-adapter": "^1.1",
