--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,13 @@
       "name": "citizen63000"
     }
   ],
-  "repositories": [
-    {
-      "type": "git",
-      "url": "https://github.com/citizen63000/easy-api-bundle.git"
-    }
-  ],
   "require": {
-    "php": ">=7.4.3",
-    "citizen63000/easy-api-bundle": "dev-master",
+    "php": "^8.1",
+    "citizen63000/easy-api-bundle": "dev-master|^3.0",
     "gesdinet/jwt-refresh-token-bundle": "^1.1"
   },
   "require-dev": {
-    "citizen63000/easy-api-tests": "^1.0.1",
+    "citizen63000/easy-api-tests": "^2.0",
     "friendsofphp/php-cs-fixer": "@stable",
     "guzzlehttp/psr7": "^1.3",
     "php-http/guzzle6-adapter": "^1.1",
@@ -31,7 +25,7 @@
   "config": {
     "discard-changes": true,
     "platform": {
-      "php": "7.4.3"
+      "php": "8.1"
     },
     "sort-packages": true
   },
