--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": "^8.1",
-    "citizen63000/easy-api-bundle": "dev-master|^3.0",
+    "citizen63000/easy-api-bundle": "dev-master|dev-php8|^3.0",
     "gesdinet/jwt-refresh-token-bundle": "^1.1"
   },
   "require-dev": {
