--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     }
   ],
   "require": {
-    "php": "^8.1",
-    "citizen63000/easy-api-bundle": "dev-master|^3.0",
+    "php": "^8.3",
+    "citizen63000/easy-api-bundle": "dev-master|^4.0.1",
     "gesdinet/jwt-refresh-token-bundle": "^1.1"
   },
   "require-dev": {
-    "citizen63000/easy-api-tests": "^2.0",
+    "citizen63000/easy-api-tests": "dev-main|^3.0",
     "friendsofphp/php-cs-fixer": "@stable",
     "guzzlehttp/psr7": "^1.3",
     "php-http/guzzle6-adapter": "^1.1",
@@ -25,7 +25,7 @@
   "config": {
     "discard-changes": true,
     "platform": {
-      "php": "8.1"
+      "php": "8.3"
     },
     "sort-packages": true
   },
